# ego_px4_sitl_demo

./: .gitignore  README.md
config/: README.md
config/ego_planner/: advanced_param.launch.py  single_run_in_sim.launch.py
config/gazebo/OakD-Lite/: model.sdf
docs/: architecture.md  debug_log.md  future_work.md  interview.md  project_history.md
ego_px4_bridge/: package.xml  setup.py
ego_px4_bridge/ego_px4_bridge/: ego_to_px4_setpoint.py  gazebo_cloud_to_ego_cloud.py  px4_offboard_arm.py  px4_to_ego_odom.py
scripts/: check_topics.sh
worlds/: simple_wall.sdf
