<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ego_px4_bridge</name>
  <version>0.0.0</version>
  <description>ROS 2 bridges connecting EGO Planner with PX4 SITL and Gazebo depth data.</description>
  <maintainer email="30071363+JIMT111@users.noreply.github.com">JIMT111</maintainer>
  <license>Proprietary</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>tf2_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
